--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="ingresar">Ingresar</string>
     <string name="restaurante">restaurante</string>
     <string name="logo_store_eat_24_7">logo store eat 24 7</string>
+    <string name="my_cart">My Cart</string>
+    <string name="toda">TODO</string>
+    <string name="easy_spanish_chiken">Easy Spanish Chiken</string>
+    <string name="_10_00">$10.00</string>
+    <string name="_52_000">$52.00</string>
 </resources>
